Fix navbar covering trailer

--- a/site/scss/main.scss
+++ b/site/scss/main.scss
@@ -45,7 +45,6 @@ nav {
   display: flex;
   flex-direction: column;
   padding-top: 4em;
-  z-index: 100;
   width: 20rem;
   height: calc(100vh - 4em);
   position: fixed;
